--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -6,6 +6,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
     />
+    <title>Timer</title>
   </head>
 
   <body>
