--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"
@@ -15,23 +16,23 @@
         <div class="delay-container">
           <label class="delay-label">
             Delay (ms)
-            <input class="delay-input" type="number" name="delay" required />
+            <input class="delay-input" type="number" name="delay" />
           </label>
         </div>
 
         <fieldset class="state-container">
           <legend>State</legend>
           <label>
-            <input type="radio" name="state" value="fulfilled" required />
+            <input type="radio" name="state" value="fulfilled" />
             Fulfilled
           </label>
           <label>
-            <input type="radio" name="state" value="rejected" required />
+            <input type="radio" name="state" value="rejected" />
             Rejected
           </label>
         </fieldset>
       </div>
-      <button type="submit">Create notification</button>
+      <button class="snackbar-btn" type="submit">Create notification</button>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/izitoast/dist/js/iziToast.min.js"></script>
